# docs/swagger.json
@@ -1,16 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Student Management System.",
-        "title": "Swagger Student Management System API",
+        "description": "Tài liệu API của hệ thống quản lý sinh viên",
+        "title": "Swagger UI Hệ thống quản lý sinh viên",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "HCMUT Team at Fsoft",
+            "name": "HCMUT Team tại FPT Software HCM",
             "email": "hongphucle1010@gmail.com"
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
         "/ping/": {
@@ -30,8 +29,8 @@
                             "$ref": "#/definitions/response.SuccessResponse-any"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -56,8 +55,8 @@
                             "$ref": "#/definitions/response.SuccessResponse-array_model_Student"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -82,8 +81,8 @@
                             "$ref": "#/definitions/response.SuccessResponse-any"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
